# COE-322-test2

hw11/: CMakeLists.txt  newtontemplate.cpp
hw12/: CMakeLists.txt  quadratics.cpp
hw13/eigen/: CMakeLists.txt  jacobi.cpp
hw2/: CMakeLists.txt  fizzbuzz.cpp
hw3/: CMakeLists.txt  collatz.cpp
hw4/: CMakeLists.txt  newton.cpp  newtonpoly.cpp
hw5/: fizzbuzz.sh
hw6/: CMakeLists.txt  perfect_numer.cpp
hw7/: CMakeLists.txt  pointclass.cpp
hw8/: 2pascaltriangle.cpp  CMakeLists.txt  try
hw9/: CMakeLists.txt  linkshared.cpp  try
